--- a/UI/main.html
+++ b/UI/main.html
@@ -48,6 +48,17 @@
         <rect width="100%" height="100%" fill="url(#cuadricula)" />
       </svg>
     </div>
-    <script src="index.js"></script>
+    <div id="contextMenu" class="context-menu">
+      <div class="menu-item" data-tipo="dormitorio">Dormitorio</div>
+      <div class="menu-item" data-tipo="cocina">Cocina</div>
+      <div class="menu-item" data-tipo="baño">Baño</div>
+      <div class="menu-item" data-tipo="sala">Sala/Living</div>
+      <div class="menu-item" data-tipo="comedor">Comedor</div>
+    </div>
+    <script src="js/state.js"></script>
+    <script src="js/tools.js"></script>
+    <script src="js/canvas.js"></script>
+    <script src="js/contextMenu.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
