--- a/UI/main.html
+++ b/UI/main.html
@@ -20,10 +20,9 @@
           >Borrar</label
         >
         <hr style="width: 80%; border: 1px solid #444" />
-        <input type="checkbox" id="btn-est-exp" />
-        <label for="btn-est-exp" class="tool-btn" id="exportBtn"
-          >Exportar JSON</label
-        >
+        <button type="click" class="tool-btn-exp" id="btn-est-exp">
+          Exportar JSON
+        </button>
       </div>
       <svg class="canvas" id="canvas">
         <defs>
