Generacion del json

--- a/UI/main.html
+++ b/UI/main.html
@@ -53,11 +53,16 @@
       <div class="menu-item" data-tipo="baño">Baño</div>
       <div class="menu-item" data-tipo="sala">Sala/Living</div>
       <div class="menu-item" data-tipo="comedor">Comedor</div>
+      <div class="menu-item" data-tipo="sotano">Sotano</div>
+      <div class="menu-item" data-tipo="dorm-invitados">
+        Dormitorio (Invitados)
+      </div>
     </div>
     <script src="js/state.js"></script>
     <script src="js/tools.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/contextMenu.js"></script>
+    <script src="js/export.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
