Gestion de multiplies canvas

--- a/UI/main.html
+++ b/UI/main.html
@@ -100,6 +100,7 @@
     <script src="js/canvas.js"></script>
     <script src="js/contextMenu.js"></script>
     <script src="js/export.js"></script>
+    <script src="js/floors.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
