ya no esta mas el sotano como opcion del menu de habitaciones

--- a/UI/main.html
+++ b/UI/main.html
@@ -10,7 +10,7 @@
     <div class="floors" id="floors">
       <h3>Piso:</h3>
       <input type="checkbox" data-group="floors" id="floor0" />
-      <label class="btn-floor" for="floor0">sub</label>
+      <label class="btn-floor" for="floor0">0</label>
       <input type="checkbox" data-group="floors" id="floor1" />
       <label class="btn-floor" for="floor1">1</label>
       <input type="checkbox" data-group="floors" id="floor2" />
@@ -64,7 +64,7 @@
           <input type="number" id="area-metros" placeholder="ej: 120" min="1" />
 
           <label>
-            <input type="checkbox" id="parking " />
+            <input type="checkbox" id="parking" />
             Estacionamiento
           </label>
 
@@ -103,7 +103,6 @@
       <div class="menu-item" data-tipo="baño">Baño</div>
       <div class="menu-item" data-tipo="sala">Sala/Living</div>
       <div class="menu-item" data-tipo="comedor">Comedor</div>
-      <div class="menu-item" data-tipo="sotano">Sotano</div>
       <div class="menu-item" data-tipo="hab-invitados">Hab-Invitados</div>
     </div>
     <script src="js/state.js"></script>
